--- a/task-1.html
+++ b/task-1.html
@@ -12,22 +12,11 @@
     <label for="distance">Enter Distance:</label>
     <input type="number" id="distance" placeholder="Distance value">
 
-    <select id="unit">
-        <option value="m">meters</option>
-        <option value="cm">centimeters</option>
-        <option value="in">inches</option>
-        <option value="ft">feet</option>
-
-    </select>
+    <label for="unit">Select Unit:</label>
+    <select id="unit"></select>
 
     <label for="convertTo">Convert To:</label>
-    <select id="convertTo">
-        <option value="m">meters</option>
-        <option value="cm">centimeters</option>
-        <option value="in">inches</option>
-        <option value="ft">feet</option>
-
-    </select>
+    <select id="convertTo"></select>
 
     <button onclick="convertDistance()">Convert</button>
 
