--- a/task-2.html
+++ b/task-2.html
@@ -19,22 +19,22 @@
 
 <body>
     <div class="container">
-        <h2>Фільтрація та Сортування Даних</h2>
+        <h2>Data filtering and sorting</h2>
 
-        <label for="dataInput">Введіть JSON дані:</label>
+        <label for="dataInput">Enter JSON data:</label>
         <textarea id="dataInput" rows="6" cols="50"></textarea>
 
-        <label for="conditionInput">Введіть умови (JSON формат):</label>
+        <label for="conditionInput">Enter the conditions (JSON format):</label>
         <textarea id="conditionInput" rows="6" cols="50"></textarea>
 
-        <button id="processBtn">Обробити</button>
+        <button id="processBtn">Process</button>
 
-        <h3>Результат:</h3>
+        <h3>Result:</h3>
         <pre id="resultOutput"></pre>
     </div>
 
     <script src="./js/task2/task2.js" type="module"></script>
-    <!-- Інші JavaScript файли, якщо потрібно -->
+
 </body>
 
 </html>
