--- a/task-1.html
+++ b/task-1.html
@@ -23,7 +23,7 @@
 
     <p id="result"></p>
 
-    <script src="js/task1.js"></script>
+    <script src="js/task1/task1.js"></script>
 </body>
 
 </html>
