--- a/task-1.html
+++ b/task-1.html
@@ -4,24 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Distance Converter Task 1</title>
+    <link rel="stylesheet" href="./css/task-1.css">
+    <title class="title">Distance Converter Task 1</title>
 </head>
 
 <body>
-    <h1>Distance Converter</h1>
-    <label for="distance">Enter Distance:</label>
-    <input type="number" id="distance" placeholder="Distance value">
+    <p><a href="index.html">Go back</a></p>
+    <div class="wrapper">
+        <h1>Distance Converter</h1>
+        <label for="distance">Enter Distance:</label>
+        <input type="number" id="distance" placeholder="Distance value">
 
-    <label for="unit">Select Unit:</label>
-    <select id="unit"></select>
+        <label for="unit">Select Unit:</label>
+        <select id="unit"></select>
 
-    <label for="convertTo">Convert To:</label>
-    <select id="convertTo"></select>
+        <label for="convertTo">Convert To:</label>
+        <select id="convertTo"></select>
 
-    <button onclick="convertDistance()">Convert</button>
+        <button onclick="convertDistance()">Convert</button>
 
-
-    <p id="result"></p>
+        <p id="result"></p>
+    </div>
 
     <script src="js/task1/task1.js"></script>
 </body>
