--- a/task-2.html
+++ b/task-2.html
@@ -3,34 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Фільтрація і Сортування Даних</title>
-    <style>
-        /* Додайте стилі за бажанням */
-        .container {
-            padding: 20px;
-        }
-
-        textarea,
-        button {
-            margin-top: 10px;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/task-2.css">
+    <title>Data filtering and sorting Task 2</title>
 </head>
 
 <body>
+    <p><a href="index.html">Go back</a></p>
     <div class="container">
-        <h2>Data filtering and sorting</h2>
+        <h1>Data filtering and sorting</h1>
+        <div class="wrapper">
+            <label for="dataInput">Enter JSON data:</label>
+            <textarea id="dataInput" rows="15" cols="150"></textarea>
 
-        <label for="dataInput">Enter JSON data:</label>
-        <textarea id="dataInput" rows="6" cols="50"></textarea>
+            <label for="conditionInput">Enter the conditions (JSON format):</label>
+            <textarea id="conditionInput" rows="10" cols="150"></textarea>
 
-        <label for="conditionInput">Enter the conditions (JSON format):</label>
-        <textarea id="conditionInput" rows="6" cols="50"></textarea>
+            <button id="processBtn">Process</button>
 
-        <button id="processBtn">Process</button>
-
-        <h3>Result:</h3>
-        <pre id="resultOutput"></pre>
+            <h3>Result:</h3>
+            <pre id="resultOutput"></pre>
+        </div>
     </div>
 
     <script src="./js/task2/task2.js" type="module"></script>
