--- a/task-1.html
+++ b/task-1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/task-1.css">
-    <title class="title">Distance Converter Task 1</title>
+    <title>Distance Converter Task 1</title>
 </head>
 
 <body>
@@ -21,9 +21,9 @@
         <label for="convertTo">Convert To:</label>
         <select id="convertTo"></select>
 
-        <button onclick="convertDistance()">Convert</button>
-
-        <p id="result"></p>
+        <button id="convertBtn">Convert</button>
+        <h3>Result:</h3>
+        <pre id="result"></pre>
     </div>
 
     <script src="js/task1/task1.js"></script>
