--- a/task-2.html
+++ b/task-2.html
@@ -10,7 +10,7 @@
 
 <body>
     <p><a href="index.html">Go back</a></p>
-    <div class="container">
+    <div>
         <h1>Data filtering and sorting</h1>
         <div class="wrapper">
             <label for="dataInput">Enter JSON data:</label>
@@ -22,7 +22,7 @@
             <button id="processBtn">Process</button>
 
             <h3>Result:</h3>
-            <pre id="resultOutput"></pre>
+            <pre id="result"></pre>
         </div>
     </div>
 
