--- a/task-3.html
+++ b/task-3.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/task-3.css">
+    <title>Asteroid Locator Task 3</title>
 </head>
 
 <body>
-    <h1>Asteroid Locator in Space</h1>
-    <button id="locate">Locate Asteroid</button>
-    <div id="result"></div>
+    <p><a href="index.html">Go back</a></p>
+    <div class="wrapper">
+        <h1>Asteroid Locator</h1>
+        <button id="locate">Locate Asteroid</button>
+        <h3>Result:</h3>
+        <pre id="result"></pre>
+    </div>
     <script src="./js/task3/task3.js" type="module"></script>
 </body>
 
