--- a/task-1.html
+++ b/task-1.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <h1>Distance Converter</h1>
         <label for="distance">Enter Distance:</label>
-        <input type="number" id="distance" placeholder="Distance value">
+        <input type="number" id="distance" placeholder="Distance value" min="0">
 
         <label for="unit">Select Unit:</label>
         <select id="unit"></select>
@@ -26,7 +26,7 @@
         <pre id="result"></pre>
     </div>
 
-    <script src="js/task1/task1.js"></script>
+    <script src="js/task1/task1.js" type="module"></script>
 </body>
 
 </html>
