--- a/task-4.html
+++ b/task-4.html
@@ -8,12 +8,10 @@
 </head>
 
 <body>
-    <!-- <div id="question-container">
-        <h1 id="question"></h1>
-        <div id="options"></div>
-        <button onclick="nextQuestion()">Next</button>
-    </div> -->
-
+    <p><a href="index.html">Go back</a></p>
+    <div>
+        <pre id="result"></pre>
+    </div>
     <script src="./js/task4/task4.js" type="module"></script>
 </body>
 
